--- a/Todo.Web/Content/Site.css
+++ b/Todo.Web/Content/Site.css
@@ -2,8 +2,7 @@
     padding-top: 10px;
     padding-bottom: 20px;
     font-size: 12px;
-    background-color: lightgrey;
-  
+    background-color: lightgrey;  
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -27,7 +26,7 @@
 
 #Navbar-brand {
     float: left;
-    padding: 21px 197px;
+    padding: 21px 220px;
     font-size: 18px;
     line-height: 20px;
     background-color: white;
@@ -35,8 +34,6 @@
     text-decoration: none;
     color: white;
 }
-
-
 
 h4, .h4 {
     font-size: 16px;
@@ -47,20 +44,19 @@ h4, .h4 {
 .panel {
     margin-bottom: 10px;
     border-radius: 12px;
+    border: none;
 }
 
 .panel-heading {
     padding: 5px 10px;
     border-bottom: 1px solid transparent;
     border-top-right-radius: 12px;
-    border-top-left-radius: 12px;
-        /*color: #ffffff;
-    background-color: #428bca;
-    border-color: #428bca;*/
+    border-top-left-radius: 12px;   
 }
 
-.detail-panel{
-
+.back-to-list{
+    padding-left: 25px;
+    padding-bottom: 15px;
 }
 
 .panel-body {
@@ -115,6 +111,7 @@ h4, .h4 {
 
 .form-control {
     border-radius: 10px;
+    width: 97.5%;
 }
 
 .select {
@@ -126,22 +123,49 @@ h4, .h4 {
     border-color: rgb(169, 169, 169);
 }
 
+.panel-primary > .panel-heading {
+    color: #ffffff;
+    background-color: green;
+    border-color: green;
+}
+
+.progres {
+    
+    background-color: #428bca !important;
+    border-color: #428bca !important;
+}
 #Filter {
-    transition: .5s ease;
-    top: 72%;
-    left: 2%;
-    width: 184px;
+    
+    top: 72%;    
+    width: 47%;
     height: 34px;
     margin-left: 0;
 }
 
 #Clear {
     background-color: lightsteelblue;
-    width: 184px;
-    transition: .5s ease;
+    width: 47%;   
     top: 87%;
-    left: 2%;
+    margin-left: 0;
     height: 34px;
+}
+
+.col-md-10{
+    padding: 10px;
+}
+
+
+#actions{
+    padding-right: 0;
+    width: 51%;
+}
+
+#Empty{
+    color: black;    
+    padding-right: 10px;
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
 }
 
 #Details{
@@ -149,15 +173,15 @@ h4, .h4 {
 }
 
 #Create {
-    width: 390px;
+    width: 97.5%;
     height: 34px;
-    margin-left: -14px;
+    margin-left: 0px;
 }
 
 #paging-button {
     color: black;
     float: left;
-    padding: 80px 584px;
+    padding: 80px 573px;
     text-decoration: none;
     transition: background-color .3s;
     border: 0px solid #ddd;
@@ -190,9 +214,9 @@ h4, h5, h6 {
     font-size: 12px;
 }
 
-
-
 .container-fluid {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
